--- a/e-wallet/src/main/resources/application.properties
+++ b/e-wallet/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 spring.application.name=e-wallet
+# ===============================
+# Server Configuration
+# ===============================
+server.port=8080
+server.servlet.context-path=/api
+
+# ===============================
+# Database Configuration (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/swiftpay?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=@Sahil12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# Hibernate JPA Configuration
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update  # Use 'update' for development, 'validate' for production
+spring.jpa.show-sql=true  # Enable SQL logging for debugging
+
+# ===============================
+# Spring Security & JWT Config
+# ===============================
+jwt.secret=MySuperSecretKeyForJWTGeneration  # Change this for security
+jwt.expiration=86400000  # Token validity: 24 hours (in milliseconds)
+
+# ===============================
+# Logging Configuration
+# ===============================
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
